...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="312dp"
                    android:layout_height="63dp"
                    android:layout_marginTop="112dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
...
                        android:includeFontPadding="false"
                        android:paddingTop="30dp"
                        android:text="@string/achievements_button"
                        android:textColor="@android:color/white" />

                    <ImageView
                        android:id="@+id/achivement_icon"
                        android:layout_width="37dp"
                        android:layout_height="33dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="67dp"
...
                        android:outlineProvider="none"
                        android:tint="@android:color/white"
                        app:srcCompat="@drawable/achievement" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="74dp"
                    android:layout_height="22dp"
                    android:layout_marginTop="72dp"
                    android:gravity="center"
                    android:text="@string/login_username"
                    android:textColor="@android:color/white"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.871"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/profile_photo"
                    android:layout_width="54dp"
                    android:layout_height="57dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/photo_description"
                    app:layout_constraintEnd_toEndOf="parent"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/go_button"
                android:layout_width="250dp"
                android:layout_height="61dp"
                android:textColor="@android:color/white"
                android:background="@drawable/button_background_profile_blue"
                android:text="@string/go_quest_button" />

            <Space
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/go_quest_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/go_quest_image_description"
                app:srcCompat="@drawable/flame_goquest" />
        </LinearLayout>

...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/create_quest_button"
                android:layout_width="250dp"
                android:layout_height="61dp"
                android:background="@drawable/button_background_profile_blue"
                android:textColor="@android:color/white"
                android:text="@string/new_quest_button" />

...
            <Space
                android:layout_width="36dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/new_quest_image"
                android:layout_width="54dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/new_quest_icon_description"
                app:srcCompat="@drawable/plus_createquest" />

        </LinearLayout>
...
            <Space
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/log_out_image"
                android:layout_width="54dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/log_out_icon_description"
                app:srcCompat="@drawable/logout" />

            <Space
...
