...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/background_mountains"
        android:layout_width="406dp"
        android:layout_height="223dp"
        android:contentDescription="@string/snowy_mountains_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/snowy_mountains" />

    <ImageView
        android:id="@+id/quest_icon"
        android:layout_width="44dp"
        android:layout_height="33dp"
        android:contentDescription="@string/quest_icon_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/login_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226"
        app:srcCompat="@drawable/quest" />

    <ImageView
        android:id="@+id/background_shiny"
        android:layout_width="124dp"
        android:layout_height="160dp"
        android:contentDescription="@string/shiny_star_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title2"
        app:layout_constraintVertical_bias="0.323">

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_gravity="center_horizontal"
            android:ems="3"
            android:gravity="start"
            android:hint="@string/login_username"
...

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_gravity="start|center_horizontal"
            android:ems="3"
            android:gravity="start"
            android:hint="@string/login_password"
...

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <Button
            android:id="@+id/lets_go_button"
            android:onClick="onLetsGoClicked"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#2D94FA"
            android:text="@string/login_go"
...

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/no_account_button"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal"
            android:onClick="onCreateAccountButton"
            android:text="@string/login_noAccount"
            android:textAllCaps="false"
...
